<resources>
    <string name="app_name">courier-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- activity change password -->
    <string name="ConfirmNewPassword">Confirm new password</string>
    <string name="NewPassword">Enter new password</string>
    <string name="ConformPasswordChange">SAVE</string>

    <!-- activity courier main -->
    <string name="textViewWelcom">hello user </string>

    <!-- activity courier profile. -->
    <string name="PhoneMP">phone </string>
    <string name="textMP">courier name </string>
    <string name="EmailMP"> mail </string>
    <string name="ChangeMP">EDIT</string>
    <string name="PassChangeMP">CHANGE PASSWORD</string>
    <string name="vehicleMP">vehicle :motorcycle car or bicycle </string>
    <string name="Phone2MP">additional phone number</string>

    <!-- activity edit my profile. -->
    <string name="PhoneEP">new phone number</string>
    <string name="Phone2EP">new additional phone number</string>
    <string name="FirstNameEP">new first name</string>
    <string name="LastNameEP">new last name</string>
    <string name="EmailEP">new email address</string>
    <string name="ChangeEP">SAVE</string>
    <string name="textEP">Edit Profile</string>
    <string name="vehicleEP">vehicle :motorcycle car or bicycle </string>


    <!-- activity main. -->
    <string name="forgetPass"><u>FORGOT PASSWORD?</u></string>
    <string name="Connect">LOG IN</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="newCourier">New User? Register Now</string>


    <!-- activity register new courier -->
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PasswordEt">Password</string>
    <string name="Phone1">Phone number</string>
    <string name="Phone2">Additional phone number</string>
    <string name="Text">NEW USER</string>
    <string name="Create">CREATE ACCOUNT</string>
    <string name="vehicle">vehicle : motorcycle car or bicycle </string>
    <string name="EmailEt">Email</string>
    <string name="enter_bank">bank details</string>


    <!-- activity  bank detailes -->
    <string name="bank">Enter bank details </string>
    <string name="messege">This information is stored for reuse</string>


    <!-- activity  active delivery -->
    <string name="IN_TRANSIT">on the way to the client</string>
    <string name="DELIVERED">delivery was delivered to client </string>
    <string name="EXCEPTION">something is wrong </string>
    <string name="info">there isnt a delivery to present </string>

    <!-- activity  show coosen -->
    <string name="printall"> there is no delivery to present</string>
    <string name="choose"> CHOOSE</string>


    <!-- activity  show coosen from history-->
    <string name="showInfo"> there is no delivery to present</string>











</resources>